k8s-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: civdle-dev
  labels:
    app: civdle
