k8s-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: civdle
  namespace: civdle-dev
  labels:
    app: civdle
spec:
  selector:
    app: civdle
  ports:
    - name: http
      port: 80
      targetPort: 5173
      protocol: TCP
      appProtocol: http
